--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
   <div class="card-body bg-light text-dark overflow-auto">
                 <!--  Users Online -->   
                 
-                    <div class='d-flex flex-column justify-content-center align-items-start ms-2 pt-2 card' id='usersOn'>
+                    <div class='d-flex flex-column justify-content-center align-items-start p-2 card' id='usersOn'>
                 
 
                      </div>
