--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,17 @@
             Messenger
           </span>
           <div class='text-light fw-bolder fs-4' id='roomName'>ROOM 01</div>
-          <button class="btn btn-dark me-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"><i class="fas fa-user-friends"></i></button>
+          
+          <div class='me-2'>
+            <button id='exit' class="btn btn-dark" type="button"><i class="fas fa-sign-out-alt"></i></button>
+          <button class="btn btn-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"><i class="fas fa-user-friends"></i></button>
+          </div>
+
         </div>
 </nav>
 
 
-<!--Online-->                                                                       <!--MEXER-->
+<!--Online-->                                                                       
 <div class="offcanvas offcanvas-end" style='width: 300px;' tabindex="-1" id="offcanvasRight">
   <div class="card-header d-flex justify-content-between bg-dark text-light">
    
@@ -122,10 +127,11 @@
     </div>
 
     <!--content-->
-    <div class='d-flex justify-content-center align-items-center align-self-center' style='width:100%; height:100%;'>
+        <div class='d-flex justify-content-center align-items-center align-self-center' style='width:100%; height:100%;'>
         
             <!-- Section Write and Read Messages -->
             <section id='Messages_send_end_read' class='d-flex flex-column justify-content-center align-items-center w-100'>
+
                     <!-- Tela de Mensagens -->
                     <div id='messages' class='p-2 mt-1 mb-1 bg-light d-flex'>
 
@@ -149,13 +155,18 @@
 
 </div>  
 
-<footer class='mt-5 d-flex flex-column align-items-center justify-content-center'>
+<footer class='mt-5 d-flex flex-column align-items-center justify-content-center p-5 w-100 bg-dark'>
         <p class='fw-bolder text-light fs-6 text-center'>Messenger Fake - Por Valber Júnior<i class="far fa-copyright"></i></p>
 </footer>
 
 <!--sound new message-->
 <audio  id='audio'>
     <source src='./assets/sound.mp3' type='audio/mp3'>
+</audio>
+
+<!--sound new user connected-->
+<audio  id='audio2'>
+    <source src='./assets/notification.mp3' type='audio/mp3'>
 </audio>
 
 <!--Bootstrap-->
